--- a/views/home.html
+++ b/views/home.html
@@ -42,38 +42,40 @@ rel="stylesheet" />
                     </a>Mis compras <i class="fas fa-shopping-basket"></i></li>
                 </ul>
             </nav>
-            <div class="burger-menu">
-                <span><i class="fas fa-bars" style="color: white;padding-top: 30px"></i></span>
-            </div>
-            <img class="banner" src="/images/img-home-banner.jpg">
+            <span class="burger-menu">
+                <i class="fas fa-bars"></i>
+            </span>
+            
     </header>
     <main>
+        <img class="banner" src="/images/img-home-banner.jpg">
+        
         <section class="cuerpo">
             <h4 class="titular">Basado en tu última visita</h4>
             <article class="articulo">
                 <img class="img-prod" src="/images/img-cafetera-moulinex.jpg"><br>
-                <div class="contenedor"><span><i class="fas fa-truck" style="color: #39b54a;"></i></span>
+                <div class="contenedor"><i class="fas fa-truck" style="color: #39b54a;"></i>
                 <p class="precio">$6.770</p>
                 <p class="descuento">40% off</p>
                 <h5 class="descripcion">Cafetera Moulinex</h5></div>
             </article>
             <article class="articulo">
                 <img class="img-prod" src="/images/img-macbook-pro-2019.jpg"><br>
-                <div class="contenedor"><span><i class="fas fa-truck" style="color: #39b54a;"></i></span>
+                <div class="contenedor"><i class="fas fa-truck" style="color: #39b54a;"></i>
                 <p class="precio">$230.000</p>
                 <p class="descuento">20% off</p>
                 <h5 class="descripcion">MacBook Pro 2019</h5></div>
             </article>
             <article class="articulo">
                 <img class="img-prod" src="/images/img-samsung-galaxy-s10.jpg"><br>
-                <div class="contenedor"><span><i class="fas fa-truck" style="color: #39b54a;"></i></span>
+                <div class="contenedor"><i class="fas fa-truck" style="color: #39b54a;"></i>
                 <p class="precio">$70.500</p>
                 <p class="descuento">10% off</p>
                 <h5 class="descripcion">Samsung Galaxy S10</h5></div>
             </article>
             <article class="articulo">
                 <img class="img-prod" src="/images/img-tv-samsung-smart.jpg"><br>
-                <div class="contenedor"><span><i class="fas fa-truck" style="color: #39b54a;"></i></span>
+                <div class="contenedor"><i class="fas fa-truck" style="color: #39b54a;"></i>
                 <p class="precio">$23.200</p>
                 <p class="descuento">5% off</p>
                 <h5 class="descripcion">SmartTv Samsung 43"</h5></div>
@@ -83,28 +85,28 @@ rel="stylesheet" />
             <h4 class="titular">Ofertas</h4>
             <article class="articulo">
                 <img class="img-prod" src="/images/img-cafetera-moulinex.jpg"><br>
-                <div class="contenedor"><span><i class="fas fa-truck" style="color: #39b54a;"></i></span>
+                <div class="contenedor"><i class="fas fa-truck" style="color: #39b54a;"></i>
                 <p class="precio">$6.770</p>
                 <p class="descuento">40% off</p>
                 <h5 class="descripcion">Cafetera Moulinex</h5></div>
             </article>
             <article class="articulo">
                 <img class="img-prod" src="/images/img-macbook-pro-2019.jpg"><br>
-                <div class="contenedor"><span><i class="fas fa-truck" style="color: #39b54a;"></i></span>
+                <div class="contenedor"><i class="fas fa-truck" style="color: #39b54a;"></i>
                 <p class="precio">$230.000</p>
                 <p class="descuento">20% off</p>
                 <h5 class="descripcion">MacBook Pro 2019</h5></div>
             </article>
             <article class="articulo">
                 <img class="img-prod" src="/images/img-samsung-galaxy-s10.jpg"><br>
-                <div class="contenedor"><span><i class="fas fa-truck" style="color: #39b54a;"></i></span>
+                <div class="contenedor"><i class="fas fa-truck" style="color: #39b54a;"></i>
                 <p class="precio">$70.500</p>
                 <p class="descuento">10% off</p>
                 <h5 class="descripcion">Samsung Galaxy S10</h5></div>
             </article>
             <article class="articulo">
                 <img class="img-prod" src="/images/img-tv-samsung-smart.jpg"><br>
-                <div class="contenedor"><span><i class="fas fa-truck" style="color: #39b54a;"></i></span>
+                <div class="contenedor"><i class="fas fa-truck" style="color: #39b54a;"></i>
                 <p class="precio">$23.200</p>
                 <p class="descuento">5% off</p>
                 <h5 class="descripcion">SmartTv Samsung 43"</h5></div>
