agregando archivos y posicionamiento avanzado

--- a/views/home.html
+++ b/views/home.html
@@ -1,112 +1,201 @@
 <!DOCTYPE html>
 <html lang="es">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mercado Liebre</title>
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet" />
+    <link rel="stylesheet" href="/css/style.css">
 </head>
 
 <body>
     <header>
-        <div>
-            <img width="370" src="/images/logo-mercado-liebre.svg">
+        <div class="encabezado">
+
+            <div class="encabezado-2">
+                <img class="logo" src="/images/logo-mercado-liebre.svg">
+
+                <div class="buscador">
+
+                    <form class="form" action="">
+                        <input type="text" name="buscar" placeholder="Buscar productos, marcas...">
+                        <button class="submite"><i class="fas fa-search"></i></i></button>
+                    </form>
+
+                </div>
+            </div>
+
+            <p class="comprar"><i class="fas fa-hand-holding-usd"></i> Comprá en cuotas y sin tarjeta de crédito</p>
         </div>
-        <p>Lugar para poner la barra de búsqueda</p>
-        <p>Comprá en cuotas y sin tarjeta de crédito</p>
+
         <nav>
-            <ul>
-                <li><a href="Ofertas">Ofertas</a></li>
-                <li><a href="Tiendas Oficiales">Tiendas Oficiales</a></li>
-                <li><a href="Vender">Vender</a></li>
-                <li><a href="Ayuda">Ayuda</a></li>
+            <ul class="menu">
+                <li><a href=""></a>Ofertas</li>
+                <li><a href="">
+                    </a>Tiendas Oficiales</li>
+                <li><a href=""></a>Vender</li>
+                <li><a href=""></a>Ayuda</li>
             </ul>
         </nav>
+
         <nav>
-            <ul>
-                <li><a href="Crea tu cuenta">Crea tu cuenta</a></li>
-                <li><a href="Ingresá">Ingresá</a></li>
-                <li><a href="Mis compras">Mis compras</a></li>
+            <ul class="menu">
+                <li><a href=""></a>Creá tu cuenta <i class="far fa-id-card"></i></li>
+                <li><a href="
+                        ">
+                    </a>Ingresá <i class="fas fa-sign-in-alt"></i></li>
+                <li><a href="
+                        ">
+                    </a>Mis compras <i class="fas fa-shopping-basket"></i></li>
             </ul>
         </nav>
-        <div>
-            <img width="370" src="/images/img-home-banner.jpg">
-        </div>
+
+        <span class="burger-menu">
+            <i class="fas fa-bars"></i>
+        </span>
     </header>
+
     <main>
-        <h4>Basado en tu última visita</h4>
-        <section>
-            <article>
-                <img width="370" src="/images/img-cafetera-moulinex.jpg">
-                <p>$6.700</p>
-                <p>40% off</p>
-                <h5>Cafetera Moulinex</h5>
+        <img class="banner" src="/images/img-home-banner.jpg">
+
+        <section class="productos">
+            <h4 class="titular">Basado en tu última visita</h4>
+
+            <article class="articulo">
+                <img class="img-prod" src="/images/img-cafetera-moulinex.jpg"><br>
+
+                <div class="contenedor">
+                    <i class="fas fa-truck" style="color: #39b54a;"></i>
+
+                    <div class="descuento-lado">
+                        <p class="precio">$6.770</p>
+                        <p class="descuento">40% off</p>
+                    </div>
+                    <h5 class="descripcion">Cafetera Moulinex</h5>
+                </div>
             </article>
-            <article>
-                <img width="370" src="/images/img-macbook-pro-2019.jpg">
-                <p>$230.000</p>
-                <p>20% off</p>
-                <h5>MacBook Pro 2019</h5>
+
+            <article class="articulo">
+                <img class="img-prod" src="/images/img-macbook-pro-2019.jpg"><br>
+
+                <div class="contenedor">
+                    <i class="fas fa-truck" style="color: #39b54a;"></i>
+                    <div class="descuento-lado">
+                        <p class="precio">$230.000</p>
+                        <p class="descuento">20% off</p>
+                    </div>
+                    <h5 class="descripcion">MacBook Pro 2019</h5>
+                </div>
             </article>
-            <article>
-                <img width="370" src="/images/img-samsung-galaxy-s10.jpg">
-                <p>$70.500</p>
-                <p>10% off</p>
-                <h5>Samsung Galaxy S10</h5>
+
+            <article class="articulo">
+                <img class="img-prod" src="/images/img-samsung-galaxy-s10.jpg"><br>
+
+                <div class="contenedor">
+                    <i class="fas fa-truck" style="color: #39b54a;"></i>
+                    <div class="descuento-lado">
+                        <p class="precio">$70.500</p>
+                        <p class="descuento">10% off</p>
+                    </div>
+                    <h5 class="descripcion">Samsung Galaxy S10</h5>
+                </div>
             </article>
-            <article>
-                <img width="370" src="/images/img-tv-samsung-smart.jpg">
-                <p>$23.200</p>
-                <p>5% off</p>
-                <h5>SmartTv Samsung 43"</h5>
+
+            <article class="articulo">
+                <img class="img-prod" src="/images/img-tv-samsung-smart.jpg"><br>
+
+                <div class="contenedor">
+                    <i class="fas fa-truck" style="color: #39b54a;"></i>
+                    <div class="descuento-lado">
+                        <p class="precio">$23.200</p>
+                        <p class="descuento">5% off</p>
+                    </div>
+                    <h5 class="descripcion">SmartTv Samsung 43"</h5>
+                </div>
             </article>
         </section>
-        <h4>Sección de Ofertas</h4>
-        <section>
-            <article>
-                <img width="370" src="/images/img-cafetera-moulinex.jpg">
-                <p>$6.770</p>
-                <p>40% off</p>
-                <h5>Cafetera Moulinex</h5>
+
+        <section class="ofertas">
+            <h4 class="titular">Ofertas</h4>
+
+            <article class="articulo">
+                <img class="img-prod" src="/images/img-cafetera-moulinex.jpg"><br>
+
+                <div class="contenedor">
+                    <i class="fas fa-truck" style="color: #39b54a;"></i>
+                    <div class="descuento-lado">
+                        <p class="precio">$6.770</p>
+                        <p class="descuento">40% off</p>
+                    </div>
+                    <h5 class="descripcion">Cafetera Moulinex</h5>
+                </div>
             </article>
-            <article>
-                <img width="370" src="/images/img-macbook-pro-2019.jpg">
-                <p>$230.000</p>
-                <p>20% off</p>
-                <h5>MacBook Pro 2019</h5>
+
+            <article class="articulo">
+                <img class="img-prod" src="/images/img-macbook-pro-2019.jpg"><br>
+
+                <div class="contenedor">
+                    <i class="fas fa-truck" style="color: #39b54a;"></i>
+                    <div class="descuento-lado">
+                        <p class="precio">$230.000</p>
+                        <p class="descuento">20% off</p>
+                    </div>
+                    <h5 class="descripcion">MacBook Pro 2019</h5>
+                </div>
             </article>
-            <article>
-                <img width="370" src="/images/img-samsung-galaxy-s10.jpg">
-                <p>$70.500</p>
-                <p>10% off</p>
-                <h5>Samsung Galaxy S10</h5>
+
+            <article class="articulo">
+                <img class="img-prod" src="/images/img-samsung-galaxy-s10.jpg"><br>
+
+                <div class="contenedor">
+                    <i class="fas fa-truck" style="color: #39b54a;"></i>
+                    <div class="descuento-lado">
+                        <p class="precio">$70.500</p>
+                        <p class="descuento">10% off</p>
+                    </div>
+                    <h5 class="descripcion">Samsung Galaxy S10</h5>
+                </div>
             </article>
-            <article>
-                <img width="370" src="/images/img-tv-samsung-smart.jpg">
-                <p>$23.200</p>
-                <p>5% off</p>
-                <h5>SmartTv Samsung 43"</h5>
+
+            <article class="articulo">
+                <img class="img-prod" src="/images/img-tv-samsung-smart.jpg"><br>
+
+                <div class="contenedor">
+                    <i class="fas fa-truck" style="color: #39b54a;"></i>
+                    <div class="descuento-lado">
+                        <p class="precio">$23.200</p>
+                        <p class="descuento">5% off</p>
+                    </div>
+                    <h5 class="descripcion">SmartTv Samsung 43"</h5>
+                </div>
             </article>
         </section>
     </main>
+
     <footer>
         <section>
-            <h4>Pagá con tarjeta o en efectivo</h4>
-            <p>Con Mercado Liebre Cash, tenés cuotas sin interés con tarjeta o efectivo en puntos de pago. ¡Y siempre es
+            <i class="fas fa-credit-card fa-2x" style="color: #1259c3;"></i>
+            <h4 class="titular-footer">Pagá con tarjeta o en efectivo</h4>
+            <p class="texto">Con Mercado Liebre Cash, tenés cuotas sin interés con tarjeta o efectivo en puntos de pago.
+                ¡Y siempre es
                 seguro!</p>
         </section>
         <section>
-            <h4>Envío gratis desde $ 2.500</h4>
-            <p>Solo por estar registrad@ en Mercado Liebre tenés envíos gratis en miles de productos. Es un beneficio de
+            <i class="fas fa-gift fa-2x" style="color: #1259c3;"></i>
+            <h4 class="titular-footer">Envío gratis desde $ 2.500</h4>
+            <p class="texto">Solo por estar registrad@ en Mercado Liebre tenés envíos gratis en miles de productos. Es
+                un beneficio de
                 Mercado Puntos.</p>
         </section>
         <section>
-            <h4>Seguridad, de principio a fin</h4>
-            <p>¿No te gusta? ¡Devolvelo! En Mercado Liebre, no hay nada que no puedas hacer, porque estás siempre
+            <i class="fas fa-user-shield fa-2x" style="color: #1259c3;"></i>
+            <h4 class="titular-footer">Seguridad, de principio a fin</h4>
+            <p class="texto">¿No te gusta? ¡Devolvelo! En Mercado Liebre, no hay nada que no puedas hacer, porque estás
+                siempre
                 protegid@.</p>
         </section>
-        <p>Copyright © 1999-2020 MercadoLiebre S.R.L.</p>
+        <p class="copyright">Copyright © 1999-2020 MercadoLiebre S.R.L.</p>
     </footer>
 </body>
 
